# grxui-plugin

./: CMakeLists.txt  GrxUIMenuView.cpp  GrxUIPlugin.cpp
python/: PyGrxUI.cpp
